<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Btn_addCourse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourse">

    <TextView
        android:id="@+id/title_addCourse"
        android:layout_width="334dp"
        android:layout_height="118dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/TitleAddCourse"
        android:textAllCaps="true"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCourseId"
        android:layout_width="223dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:autofillHints="@string/EnterCourseIdHint"
        android:hint="@string/EnterCourseIdHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/title_addCourse"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/title_addCourse"
        app:layout_constraintTop_toBottomOf="@+id/title_addCourse" />

    <TextView
        android:id="@+id/Subtitl_CID"
        android:layout_width="103dp"
        android:layout_height="43dp"
        android:layout_marginTop="38dp"
        android:text="@string/SubtitlCID"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtCourseId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/title_addCourse"
        app:layout_constraintTop_toBottomOf="@+id/title_addCourse" />

    <TextView
        android:id="@+id/Subtitl_CN"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/SubtitlCN"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCourseId" />

    <EditText
        android:id="@+id/txtCourseName"
        android:layout_width="196dp"
        android:layout_height="43dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:autofillHints="@string/EnterCourseNameHint"
        android:hint="@string/EnterCourseNameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtCourseId"
        app:layout_constraintTop_toBottomOf="@+id/txtCourseId" />

    <Button
        android:id="@+id/btn_addCourse"
        android:layout_width="333dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:text="@string/BtnAddCourse"
        app:layout_constraintEnd_toEndOf="@+id/txtCourseName"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/Subtitl_CN"
        app:layout_constraintTop_toBottomOf="@+id/txtCourseName" />

</androidx.constraintlayout.widget.ConstraintLayout>